fix horizontal overflow iOS (#26)
* fix footer overflowing body

* delete unused

* patch footer tel link style

--- a/css/section-footer.css
+++ b/css/section-footer.css
@@ -20,6 +20,7 @@
     padding: 0;
     margin: 4rem 0;
     width: 100%;
+    box-sizing: border-box;
   }
 
   .footer-block.grid__item:first-child {
